refactor: changes tag struct to pq.StringArray
