# app/rest/server.go
@@ -51,8 +51,6 @@ func StartRestServer(orm *db.DbOrm, kp *kafka.KafkaProducer, port int) {
 		item.Post("", restService.CreateItem)
 		item.Get("/:item_id", restService.FindItem)
 		item.Patch("/:item_id", restService.UpdateItem)
-		item.Post("/:item_id/tag", restService.AddItemTag)
-		item.Delete("/:item_id/tag", restService.DeleteItemTag)
 	}
 
 	addr := fmt.Sprintf("0.0.0.0:%d", port)
